<resources>
    <string name="app_name">Fragment_2</string>
    <string name="enter_the_text">Enter the text</string>
    <string name="submit">Submit</string>
    <string name="enter_text">Enter Text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_no">Enter Phone No</string>
    <string name="enter_address">Enter Address</string>
</resources>