<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_text"
        android:id="@+id/text_box"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:layout_marginTop="40sp"
        />
    <EditText
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/first_text_box"
        app:layout_constraintTop_toBottomOf="@id/text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_first_name"
        android:inputType="text"
        android:autofillHints="name"
        />
    <EditText
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/second_text_box"
        app:layout_constraintTop_toBottomOf="@id/first_text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_last_name"
        android:inputType="text"
        android:autofillHints="name"
        />
    <EditText
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/third_text_box"
        app:layout_constraintTop_toBottomOf="@id/second_text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:autofillHints="name"
        />
    <EditText
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fourth_text_box"
        app:layout_constraintTop_toBottomOf="@id/third_text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_phone_no"
        android:inputType="numberDecimal"
        android:autofillHints="name"
        tools:ignore="LabelFor" />
    <EditText
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fifth_text_box"
        app:layout_constraintTop_toBottomOf="@id/fourth_text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_address"
        android:inputType="textPostalAddress"
        android:autofillHints="name"
        tools:ignore="LabelFor" />
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/fifth_text_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40sp"
        />
    <FrameLayout
        app:layout_constraintTop_toBottomOf="@id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frame_layout"
        />
</androidx.constraintlayout.widget.ConstraintLayout>